fixing error message appearing shifting form content

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -90,12 +90,14 @@ a:focus:not(:focus-visible) {
   color: var(--red);
   font-size: 1.2rem;
   font-weight: 700;
-  height: 100%;
-  margin: 0 0.5em 1.5em 0.5em;
 }
 
 .error-border {
-  border: 2px solid var(--red);
+  outline: 2px solid var(--red);
+}
+
+.error-placeholder {
+  min-height: 1.6rem;
 }
 
 .exclaim {
@@ -109,10 +111,13 @@ a:focus:not(:focus-visible) {
 }
 
 .background {
-  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.85);
-  padding: 0.1em 0.8em 0.2em;
+  padding: 0.3em 0.5em 0.4em;
   border-radius: var(--def-radius);
+  margin-bottom: 0.5em;
 }
 
 #form-container {
